--- a/assets/css/templatemo-cyborg-gaming.css
+++ b/assets/css/templatemo-cyborg-gaming.css
@@ -332,10 +332,11 @@ Pre-loader Style
 ---------------------------------------------
 Header Style
 --------------------------------------------- 
-*/
-
+*/ 
+/*Color fondo responsibe */
+ 
 .background-header {
-  background-color: #fff !important;
+  background-color: #000000 !important;
   height: 70px!important;
   position: fixed!important;
   top: 0!important;
@@ -411,15 +412,15 @@ Header Style
 }
 
 .header-area .main-nav .logo img {
-  width: 191px;
+  width: 140px;
 }
 
 .background-header .main-nav .logo {
-  margin-top: 8px;
+  margin-top: 1px;
 }
 
 .background-header .main-nav .logo img {
-  width: 180px;
+  width: 140px;
 }
 
 .header-area .main-nav .nav {
@@ -523,7 +524,7 @@ Header Style
   -o-transition: all 0.4s;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  background-color: #e75e8d;
+  background-color: #fffb00;
   display: block;
   position: absolute;
   width: 30px;
@@ -534,7 +535,7 @@ Header Style
 .background-header .main-nav .menu-trigger span,
 .background-header .main-nav .menu-trigger span:before,
 .background-header .main-nav .menu-trigger span:after {
-  background-color: #e75e8d;
+  background-color: #00eeff;
 }
 
 .header-area .main-nav .menu-trigger span:before,
@@ -543,7 +544,7 @@ Header Style
   -o-transition: all 0.4s;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  background-color: #e75e8d;
+  background-color: #005f28;
   display: block;
   position: absolute;
   width: 30px;
@@ -554,7 +555,7 @@ Header Style
 
 .background-header .main-nav .menu-trigger span:before,
 .background-header .main-nav .menu-trigger span:after {
-  background-color: #e75e8d;
+  background-color: #38ee00;
 }
 
 .header-area .main-nav .menu-trigger span:before,
@@ -589,29 +590,29 @@ Header Style
   background-color: transparent;
   width: 100%;
 }
-
+ /*Equis 1*/
 .header-area .main-nav .menu-trigger.active span:before {
   -moz-transform: translateY(6px) translateX(1px) rotate(45deg);
   -ms-transform: translateY(6px) translateX(1px) rotate(45deg);
   -webkit-transform: translateY(6px) translateX(1px) rotate(45deg);
   transform: translateY(6px) translateX(1px) rotate(45deg);
-  background-color: #e75e8d;
+  background-color: #fffb00;
 }
 
 .background-header .main-nav .menu-trigger.active span:before {
-  background-color: #e75e8d;
+  background-color: #ffe602;
 }
-
+/*Equis 2*/
 .header-area .main-nav .menu-trigger.active span:after {
   -moz-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   -ms-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   -webkit-transform: translateY(-6px) translateX(1px) rotate(-45deg);
   transform: translateY(-6px) translateX(1px) rotate(-45deg);
-  background-color: #e75e8d;
+  background-color: #005f28;
 }
 
 .background-header .main-nav .menu-trigger.active span:after {
-  background-color: #e75e8d;
+  background-color: #005f28;
 }
 
 .header-area.header-sticky {
@@ -619,7 +620,7 @@ Header Style
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #fff;
+  color: #005f28;
 }
 
 @media (max-width: 1200px) {
@@ -668,8 +669,9 @@ Header Style
   .header-area.header-sticky .nav li.search-icon a {
     width: 100%;
   }
+  /*Menu responsibo 1ro*/
   .header-area {
-    background-color: #f7f7f7;
+    background-color: #000000;
     padding: 0px 15px;
     height: 80px;
     box-shadow: none;
